--- a/CONTRIBUTING.rdoc
+++ b/CONTRIBUTING.rdoc
@@ -1,36 +1,31 @@
 = Source Repository
 
-Rake is currently hosted at github. The github web page is
+Rake is currently hosted at Github. The Github web page is
 https://github.com/ruby/rake . The public git clone URL is
 
   git://github.com/ruby/rake.git
 
 = Running the Rake Test Suite
 
-If you wish to run the unit and functional tests that come with Rake:
+If you wish to run the unit and functional tests:
 
 * +cd+ into the top project directory of rake.
-* Install gem dependency using bundler:
+* Install gem dependencies using Bundler:
 
-    bundle install  # Install bundler, minitest and rdoc
+    bundle install
 
-* Type one of the following:
+* Run Rake's test suite
 
-    rake            # If you have run rake's tests
+    rake
 
 = Issues and Bug Reports
 
-Feel free to submit commits or feature requests.  If you send a patch,
-remember to update the corresponding unit tests.  In fact, I prefer
-new feature to be submitted in the form of new unit tests.
+Feel free to submit commits or feature requests on Github.  If you send a patch,
+remember to update the corresponding unit tests.
 
-For other information, feel free to ask on the ruby-talk mailing list.
+For other information, feel free to ask on the ruby-talk mailing list or create
+an issue on Github.
 
 If you have found a bug in rake please try with the latest version of rake
 before filing an issue.  Also check History.rdoc for bug fixes that may have
 addressed your issue.
-
-When submitting pull requests please check the rake Travis-CI page for test
-failures:
-
-  https://travis-ci.org/ruby/rake
